# MusicTheoryAppKhvostenko

./: README.md  pyproject.toml
content/exercises/harmony/chord_from_note/: exercise.json
content/exercises/harmony/i_iv_v/: exercise.json
content/exercises/harmony/resolve_tritone/: exercise.json
content/exercises/scales/dorian_from_note/: exercise.json
content/exercises/singing/lydian_mode/: exercise.json
content/exercises/singing/major7_second_inversion/: exercise.json
src/music_trainer/: __init__.py  models.py
src/music_trainer/app/: main.py
src/music_trainer/audio/: engine.py
src/music_trainer/content/: manager.py
src/music_trainer/grading/: pitch.py
src/music_trainer/notation/: score.py
src/music_trainer/srs/: scheduler.py
src/music_trainer/stats/: analytics.py
tests/: test_content_and_grading.py  test_srs.py
