[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-theory-trainer"
version = "0.1.0"
description = "Modular SRS desktop app for ear-training and theory drills"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
